--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,19 +9,16 @@
 
     <Button
         android:id="@+id/btn_camara"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center"
         android:text="@string/btn_camara" />
 
     <ImageView
         android:id="@+id/foto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"/>
-
-
-
-
-
+        android:layout_height="match_parent"
+        tools:srcCompat="@tools:sample/avatars"/>
 
 </LinearLayout>
